Fix link visibility in ToolCard and LanguageTopToolsWidget

--- a/components/tools/listPage/ToolCard/ToolCard.module.css
+++ b/components/tools/listPage/ToolCard/ToolCard.module.css
@@ -44,6 +44,11 @@
     vertical-align: top;
 }
 
+.toolLink {
+    text-underline-offset: 4px;
+    text-decoration: underline;
+}
+
 .toolType {
     margin: 0 10px 0 0;
 }
